--- a/templates/home.html
+++ b/templates/home.html
@@ -7,11 +7,9 @@
 <h2><a href="/">Welcome To Bajaj Finsrev</a></h2>
 <form action="/bfhl" method="post">
   <label for="fname">FULL NAME with underscore:</label><br>
-  <input type="text" id="fname" name="name"  ><br>
+  <input type="text" id="fname" name="name"  ><br><br>
   <label for="dob">DOB</label><br>
-  <input type="date" id="dob" name="DOB" value="DD/MM/YYYY"><br>
-  <label for="ln">length of array</label><br>
-  <input type="text" id="ln" name="ln" value=""><br>
+  <input type="date" id="dob" name="DOB" value="DD/MM/YYYY"><br><br>
   <label for="lna">enter elements with space</label><br>
   <input type="text" id="lna" name="array"><br><br>
   <br>
